--- a/assets/language_gm.properties
+++ b/assets/language_gm.properties
@@ -3,16 +3,16 @@ newgame=Neues Spiel
 continuegame=Spiel Fortsetzen
 settings=Einstellungen
 exitgame=Spiel Verlassen
-esc=ESC drucken um das Spiel zu verlassen
+esc=ESC druecken um das Spiel zu verlassen
 youlost=Du hast verloren
-gomenu=Zum Menu
+gomenu=Zum Menue
 youwon=Du hast gewonnen
 lives=Leben
-keystatus=Schlussel Status
-keystatusok=Schlussel erhalten
-keystatusnotok=Schlussel nicht erhalten
-enemieskilled=Getotete Gegner
+keystatus=Schluessel Status
+keystatusok=Schluessel erhalten
+keystatusnotok=Schluessel nicht erhalten
+enemieskilled=Getoetete Gegner
 selectmap=Karte auswaehlen
 uploadmap=Karte hochladen
-back=Zuruck
-menumusic=Menu Musik
+back=Zurueck
+menumusic=Menue Muesik
