--- a/assets/language_hn.properties
+++ b/assets/language_hn.properties
@@ -1,18 +1,18 @@
-greeting=Namaste
-newgame=naya khel
-continuegame=khel jaari rakhen
+greeting=नमस्ते
+newgame=नया गेम
+continuegame=गेम  जारी रखें
 settings=सेटिंग्स
-exitgame=
-esc=
-youlost=
-gomenu=
-youwon=
-lives=
-keystatus=
-keystatusok=
-keystatusnotok=
-enemieskilled=
-selectmap=
-uploadmap=
-back=
-menumusic=
+exitgame=गेम  समाप्त करे
+esc=गेम समाप्त करने के लिए ‘ई एस सी’ दबाए
+youlost=आप हार गए
+gomenu= मेनू पर जाएँ
+youwon=आप जीत गए
+lives= ज़िंदगियाँ
+keystatus=चाबी सूचना
+keystatusok=चाबी सूचना ठीक है
+keystatusnotok=चाबी सूचना ठीक नहीं है
+enemieskilled=दुश्मन मारे गए
+selectmap=नक्शा चुने
+uploadmap=नक्शा  डाले
+back=वापस
+menumusic=मेनू संगीत
