--- a/assets/language_hn.properties
+++ b/assets/language_hn.properties
@@ -1,18 +1,18 @@
-greeting=नमस्ते
-newgame=नया गेम
-continuegame=गेम  जारी रखें
-settings=सेटिंग्स
-exitgame=गेम  समाप्त करे
-esc=गेम समाप्त करने के लिए ‘ई एस सी’ दबाए
-youlost=आप हार गए
-gomenu= मेनू पर जाएँ
-youwon=आप जीत गए
-lives= ज़िंदगियाँ
-keystatus=चाबी सूचना
-keystatusok=चाबी सूचना ठीक है
-keystatusnotok=चाबी सूचना ठीक नहीं है
-enemieskilled=दुश्मन मारे गए
-selectmap=नक्शा चुने
-uploadmap=नक्शा  डाले
-back=वापस
-menumusic=मेनू संगीत
+greeting=namaste
+newgame= naya khel
+continuegame=khel jaari rakhiye
+settings= settings
+exitgame=game band kariye
+esc=escape
+youlost=aap haar gaye
+gomenu= menu me jaiye
+youwon=aap jeet gaye
+lives= jaan
+keystatus=chaabi sthiti
+keystatusok=chaabi sthiti theek
+keystatusnotok=chaabi sthiti theek nahi
+enemieskilled=dushman maare
+selectmap=naksha chune
+uploadmap=naksha daale
+back=firse jaaye
+menumusic=menu sangeet
