2nd last commıt

--- a/assets/language_ar.properties
+++ b/assets/language_ar.properties
@@ -1,18 +1,27 @@
-greeting=مرحبا
-newgame=إلعب مجددا
-continuegame=واصل اللعب
-settings=إعدادات اللعبة
-exitgame=الخروج من اللعبة
-esc=إضغط ESC
-youlost=خسرت
-gomenu=اذهب إلى القائمة
-youwon=ربحت
-lives=الأرواح
-keystatus=حالة المفاتيح
-keystatusok=حالة المفاتيح:نعم
-keystatusnotok=حالة المفاتيح:لا
-enemieskilled=موت الأعداء
-selectmap=إختر الخريطة
-uploadmap=تحميل الخريطة
-back=عد
-menumusic=قائمة الموسيقى
+greeting=Mar7aban lil Moughamara!
+newgame=Il3ab Moujadadan
+continuegame=Wasel al La3ib
+settings=E3dadet al Lo3ba
+exitgame=Al 5ourouj Mina Lo3ba
+esc=Ithghat ESC
+youlost=5asert
+gomenu=Ithhab ila al 9a2ima
+youwon=Rabiht
+lives=
+keystatusok=
+keystatusnotok=
+selectmap=
+uploadmap=
+back=
+menumusic=
+level=
+mainmenu=
+resume=
+shieldno=
+shieldyes=
+selectlanguage=
+gamemusic=
+gamesound=
+volumeup=
+volumedown=
+volume=
