--- a/assets/language_cn.properties
+++ b/assets/language_cn.properties
@@ -8,11 +8,20 @@ youlost=游戏失败
 gomenu=菜单
 youwon=游戏通关
 lives=生命值
-keystatus=钥匙状态
 keystatusok=钥匙拾得
 keystatusnotok=钥匙未拾得
-enemieskilled=敌人已打败
 selectmap=选择地图
 uploadmap=下载地图
 back=返回
 menumusic=菜单音乐
+level=
+mainmenu=
+resume=
+shieldno=
+shieldyes=
+selectlanguage=
+gamemusic=
+gamesound=
+volumeup=
+volumedown=
+volume=
