--- a/assets/language_en.properties
+++ b/assets/language_en.properties
@@ -1,4 +1,4 @@
-greeting=Hello!
+greeting=Welcome to the Adventure!
 newgame=New Game
 continuegame=Continue Game
 settings=Settings
@@ -8,11 +8,20 @@ youlost=You Lost!
 gomenu=Go to Menu
 youwon=You Won!
 lives=Lives
-keystatus=Key Status
 keystatusok=Key Status: Yes
 keystatusnotok=Key Status: No
-enemieskilled=Enemies Killed:
 selectmap=Select Map
 uploadmap=Upload Map
 back=Back
 menumusic=Menu Music
+level=Level
+mainmenu=Main Menu
+resume=Resume
+shieldno=Shield: No
+shieldyes=Shield: Yes
+selectlanguage=Select Language
+gamemusic=Game Music
+gamesound=Game Sound
+volumeup=Volume Up
+volumedown=Volume Down
+volume=Volume: 
