--- a/assets/language_fr.properties
+++ b/assets/language_fr.properties
@@ -1,18 +1,27 @@
-greeting=Bonjour!
+greeting=Bienvenue dans cette Aventure!
 newgame=Nouvelle Partie
-continuegame=Continuer la partie
+continuegame=Continuer la Partie
 settings=Options
-exitgame=Quitter la partie
-esc=Appuyer sur Echappe pour quitter la partie
-youlost=Perdu
-gomenu=Aller au menu
-youwon=Gagne
-lives=vies
-keystatus=Cle recuperee
-keystatusok=Oui
-keystatusnotok=Non
-enemieskilled=Nombre d'ennemies tues
-selectmap=Choisir le niveau
-uploadmap=Upload le niveau
+exitgame=Quitter la Partie
+esc=Appuyer sur Echappe pour quitter la Partie
+youlost=Perdu!
+gomenu=Aller au Menu
+youwon=Gagne!
+lives=vies:
+keystatusok=Cle Recuperee: Oui
+keystatusnotok=Cle Recuperee: Non
+selectmap=Choisir le Niveau
+uploadmap=Upload le Niveau
 back=Retour
-menumusic=Musique du menu
+menumusic=Musique du Menu
+level=Niveau
+mainmenu=Menu Principal
+resume=Continuer
+shieldno=Bouclier: Non
+shieldyes=Bouclier: Oui
+selectlanguage=Choisir la Langue
+gamemusic=Musique
+gamesound=Effet Sonore
+volumeup=Augmenter le Volume
+volumedown=Diminuer le Volume
+volume=Volume: 
