--- a/assets/language_sp.properties
+++ b/assets/language_sp.properties
@@ -1,18 +1,27 @@
-greeting=Hola!
-newgame= Partida nueva
-continuegame=Continuar la partida
+greeting=Bienvenido a la Aventura!
+newgame= Partida Nueva
+continuegame=Continuar la Partida
 settings=Ajustes
-exitgame=Salir del juego
-esc=Seleccione esc para salir del juego
-youlost=Has perdido
-gomenu=Ir al menu.
-youwon=Ganaste
-lives=Vidas
-keystatus=Estado de la llave
-keystatusok=Estado de la llave si
-keystatusnotok=Estdao de la llave no
-enemieskilled=Enemigos muertos
-selectmap=Seleccionar mapa
-uploadmap=Cargar el mapa
+exitgame=Salir del Juego
+esc=Seleccione esc para Salir del Juego
+youlost=Has Perdido!
+gomenu=Ir al Menu.
+youwon=Ganaste!
+lives=Vidas:
+keystatusok=Estado de la llave: Si
+keystatusnotok=Estdao de la llave: No
+selectmap=Seleccionar Mapa
+uploadmap=Cargar el Mapa
 back=Regresar
-menumusic=Musica del menu
+menumusic=Musica del Menu
+level=Nivel
+mainmenu=Menu Principal
+resume=Resumir
+shieldno=Escudo: No
+shieldyes=Escudo: Si
+selectlanguage=Seleccionar Idioma
+gamemusic=Musica del Juego
+gamesound=Sonido del Juego
+volumeup=Subir Volumen
+volumedown=Bajar Volumen
+volume=Volumen: 
