--- a/assets/language_tr.properties
+++ b/assets/language_tr.properties
@@ -1,21 +1,28 @@
-greeting=Merhaba!
+greeting=Maceraya Hosgeldin!
 newgame=Yeni Oyuna Basla
-continuegame=Oyuna Devam Et
 settings=Ayarlar
-exitgame=Oyundan Cık
-esc=Oyundan Cıkmak Icin ESC'ye Basın
+exitgame=Oyundan Cik
+esc=Oyundan Cikmak Icin ESC'ye Basin
 youlost=Kaybettin!
 gomenu=Menuye Don
-youwon=Kazandın!
-lives=Canlar
-keystatus=Anahtar
-keystatusok=Anahtar Var
-keystatusnotok=Anahtar Yok
-enemieskilled=Oldurulen Dusmanlar
-selectmap=Haritayı Sec
+youwon=Kazandin!
+lives=Can:
+keystatusok=Anahtar: Var
+keystatusnotok=Anahtar: Yok
+selectmap=Haritayi Sec
 uploadmap=Harita Yukle
 back=Geri
 menumusic=Menu Muzigi
-
+level=Seviye
+mainmenu=Ana Menu
+resume=Devam Et
+shieldno=Kalkan: Yok
+shieldyes=Kalkan: Var
+selectlanguage=Dil Sec
+gamemusic=Oyun Muzigi
+gamesound=Oyun Sesi
+volumeup=Sesi Arttir
+volumedown=Sesi Azalt
+volume=Ses: 
 
 
