--- a/assets/language_gm.properties
+++ b/assets/language_gm.properties
@@ -1,18 +1,28 @@
-greeting=Hallo!
+greeting=Willkommen zum Abenteuer!
 newgame=Neues Spiel
 continuegame=Spiel Fortsetzen
 settings=Einstellungen
 exitgame=Spiel Verlassen
 esc=ESC druecken um das Spiel zu verlassen
-youlost=Du hast verloren
+youlost=Du hast verloren!
 gomenu=Zum Menue
-youwon=Du hast gewonnen
+youwon=Du hast gewonnen!
 lives=Leben
-keystatus=Schluessel Status
 keystatusok=Schluessel erhalten
 keystatusnotok=Schluessel nicht erhalten
-enemieskilled=Getoetete Gegner
 selectmap=Karte auswaehlen
 uploadmap=Karte hochladen
 back=Zurueck
 menumusic=Menue Muesik
+level=Level
+mainmenu=Hauptmenue
+resume=Fortsetzen
+shieldno=Schild: Nein
+shieldyes=Schild: Ja
+selectlanguage=Sprache auswaehlen
+gamemusic=Spiel Music
+gamesound=Sound Effekte
+volumeup=Lautstaerke hoch
+volumedown=Lautstaerke runter
+volume=Lautstaerke: 
+
