--- a/assets/language_hn.properties
+++ b/assets/language_hn.properties
@@ -8,11 +8,20 @@ youlost=आप हार गए
 gomenu= मेनू पर जाएँ
 youwon=आप जीत गए
 lives= ज़िंदगियाँ
-keystatus=चाबी सूचना
 keystatusok=चाबी सूचना ठीक है
 keystatusnotok=चाबी सूचना ठीक नहीं है
-enemieskilled=दुश्मन मारे गए
 selectmap=नक्शा चुने
 uploadmap=नक्शा  डाले
 back=वापस
 menumusic=मेनू संगीत
+level=
+mainmenu=
+resume=
+shieldno=
+shieldyes=
+selectlanguage=
+gamemusic=
+gamesound=
+volumeup=
+volumedown=
+volume=
