--- a/assets/language_ru.properties
+++ b/assets/language_ru.properties
@@ -1,18 +1,27 @@
-greeting=Привет
-newgame=Новая игра
-continuegame=Продолжить
-settings=Настройки
-exitgame=Выход
-esc=Нажмите Esc для выхода из игры
-youlost=Вы проиграли
-gomenu=Выйти в меню
-youwon=Победа!
-lives=Жизни
-keystatus=Ключи:
-keystatusok=Ключи: Есть
-keystatusnotok=Ключи: Нет
-enemieskilled=Убито врагов:
-selectmap=Выбрать карту
-uploadmap=Загрузить карту
-back=Назад
-menumusic=Музыка в меню
+greeting=Dobro Pozhalovat'!
+newgame=Novaya Igra
+continuegame=Prodolzhit'
+settings=Nastroyki
+exitgame=Vihod
+esc=Nazhmite ESC Dlya Vihoda
+youlost=Vi Proigrali!
+gomenu=V Menu
+youwon=Vi Pobedili!
+lives=Zhizni
+keystatusok=Kluch: Da
+keystatusnotok=Kluch: Net
+selectmap=Vibrat Uroven'
+uploadmap=Zagruzit Uroven'
+back=Nazad
+menumusic=Musika Menu
+level=Uroven'
+mainmenu=Glavnoe Menu
+resume=Prodolzhit'
+shieldno=Schit: Net
+shieldyes=Schit: Yest
+selectlanguage=Vibrat' Yazik
+gamemusic=Musika Igri
+gamesound=Zvuki Igri
+volumeup=Pribavit' Zvuk
+volumedown=Ubavit' Zvuk
+volume=Zvuk: 
