2nd last commıt

--- a/assets/language_cn.properties
+++ b/assets/language_cn.properties
@@ -1,27 +1,27 @@
-greeting=你好!
-newgame=新游戏
-continuegame=继续游戏
-settings=设置
-exitgame=退出游戏
-esc=退出全屏
-youlost=游戏失败
-gomenu=菜单
-youwon=游戏通关
-lives=生命值
-keystatusok=钥匙拾得
-keystatusnotok=钥匙未拾得
-selectmap=选择地图
-uploadmap=下载地图
-back=返回
-menumusic=菜单音乐
-level=
-mainmenu=
-resume=
-shieldno=
-shieldyes=
-selectlanguage=
-gamemusic=
-gamesound=
-volumeup=
-volumedown=
-volume=
+greeting=Huan ying lai dao da mao xian!
+newgame=Xin you Xi
+continuegame=Ji xu you xi
+settings=She zhi
+exitgame=Tui chu you xi
+esc=An ESC jian tui chu you xi
+youlost=Ni shu le!
+gomenu=Zhuan dao cai dan
+youwon=Ni ying le!
+lives=Sheng ming zhi:
+keystatusok=Yao shi: you
+keystatusnotok=Yao shi: wu
+selectmap=Xuan ze di tu
+uploadmap=Shang chuan di tu
+back=Shang yi bu
+menumusic=Cai dan yin yue
+level=Deng ji 
+mainmenu=Zhu cai dan
+resume=Ji xu
+shieldno=Hu dun: wu
+shieldyes=Hu dun: you
+selectlanguage=Xuan ze yu yan
+gamemusic=You xi yin yue
+gamesound=You xi sheng yin
+volumeup=Yin liang sheng gao
+volumedown=Yin liang jiang di
+volume=Yin liang: 
