--- a/assets/language_hn.properties
+++ b/assets/language_hn.properties
@@ -1,27 +1,27 @@
-greeting=namaste
-newgame= naya khel
-continuegame=khel jaari rakhiye
-settings=settings
-exitgame=game band kariye
-esc=khel khatam karne ke liye esc dabaye
-youlost=aap haar gaye
-gomenu=menu me jaiye
-youwon=aap jeet gaye
-lives=jaan
-keystatusok=chaabi sthiti theek
-keystatusnotok=chaabi sthiti theek nahi
-selectmap=naksha chune
-uploadmap=naksha daale
-back=firse jaaye
+greeting=Romanchak khel me aapka swagat hai
+newgame= Naya khel
+continuegame=Khel jaari rakhiye
+settings=Settings
+exitgame=Game band kariye
+esc=Khel khatam karne ke liye esc dabaye
+youlost=Aap haar gaye!
+gomenu=Menu me jaiye
+youwon=Aap jeet gaye!
+lives=Jaan
+keystatusok=Chaabi sthiti: theek
+keystatusnotok=Chaabi sthiti: theek nahi
+selectmap=Naksha chune
+uploadmap=Naksha daale
+back=Firse jaaye
 menumusic=menu sangeet
-level=padao
-mainmenu=mukhya menu
-resume=fır shuru kare
-shieldno=kavach nahi hai
-shieldyes=kavach hai
-selectlanguage=bhasha chune
-gamemusic=khel sangeet
-gamesound=khel aawaj
-volumeup=aawaj badhaye
-volumedown=aawaj kam kare
-volume=aawaj
+level=Padao 
+mainmenu=Mukhya menu
+resume=Fir shuru kare
+shieldno=Kavach: nahi hai
+shieldyes=Kavach: hai
+selectlanguage=Bhasha chune
+gamemusic=Khel sangeet
+gamesound=Khel aawaj
+volumeup=Aawaj badhaye
+volumedown=Aawaj kam kare
+volume=Aawaj: 
