--- a/assets/language_sp.properties
+++ b/assets/language_sp.properties
@@ -9,12 +9,12 @@ gomenu=Ir al Menu.
 youwon=Ganaste!
 lives=Vidas:
 keystatusok=Estado de la llave: Si
-keystatusnotok=Estdao de la llave: No
+keystatusnotok=Estado de la llave: No
 selectmap=Seleccionar Mapa
 uploadmap=Cargar el Mapa
 back=Regresar
 menumusic=Musica del Menu
-level=Nivel
+level=Nivel 
 mainmenu=Menu Principal
 resume=Resumir
 shieldno=Escudo: No
