--- a/assets/language_tr.properties
+++ b/assets/language_tr.properties
@@ -6,14 +6,14 @@ esc=Oyundan Cikmak Icin ESC'ye Basin
 youlost=Kaybettin!
 gomenu=Menuye Don
 youwon=Kazandin!
-lives=Can:
+lives=Canlar:
 keystatusok=Anahtar: Var
 keystatusnotok=Anahtar: Yok
 selectmap=Haritayi Sec
 uploadmap=Harita Yukle
 back=Geri
 menumusic=Menu Muzigi
-level=Seviye
+level=Seviye 
 mainmenu=Ana Menu
 resume=Devam Et
 shieldno=Kalkan: Yok
