2nd last commıt

--- a/assets/language_hn.properties
+++ b/assets/language_hn.properties
@@ -1,4 +1,4 @@
-greeting=Romanchak khel me aapka swagat hai
+greeting=Romanchak khel me aapka swagat hai!
 newgame= Naya khel
 continuegame=Khel jaari rakhiye
 settings=Settings
